# tnmt-1.github.io

./: .editorconfig  .gitignore  .gitmodules  .markdownlint.json  404.html  README.md  about.html  create_post_file.sh  docusaurus.config.js  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  gcloud_oidc_setup.sh  index.html  mkdocs.yml  next.config.js  package-lock.json  package.json  pyproject.toml  resume.html  serve.sh  sitemap.xml  tags.html
blog/: 2019-07-02_2.md  2019-07-04_1.md  2019-07-08_1.md  2019-07-22_1.md  2019-09-06_1.md  2019-09-16_1.md  2019-09-21_1.md  2019-09-22_1.md  2019-09-27_1.md  2019-10-10_1.md  2019-11-25_1.md  2021-04-26_node-install.md  2021-09-24_aws-ivs.md  2021-10-04_mahjong.md  2021-10-14_linux-unit.md  2022-01-08_aws-ses-for-php.md  2022-01-29_User-centered-theory-Manufacturing-that-moves-the-heart-starting-from-you.md  2022-02-13_Project-management-taught-by-foreign-consultants.md  2022-04-12_1.md  2022-05-19-1.md  2022-07-18_1.md  2022-07-24_1.md  2022-08-30_1.md  2022-09-01_1.md  2022-09-02_1.md  2022-09-06_1.md  2022-09-11_1.md  authors.yml  index.html
components/: Personality.js  Skill.js
docs/: _label.mdx  about.md  career.md  index.md  personality.md  private.md  resume.md  skill.md  skill.mdx  tags.md
google_docs/: 2022-05-14-foobar.md  2022-05-15-1.md  2022-05-19-1.md  2022-06-05-1.md  2022-07-01-1.md
lib/: markdownToHtml.js  posts.js
overrides/: blog.html  main.html
pages/: 404.js  _app.js  _document.js  index.js  profile.js
posts/: 2019-08-04_1.md  2019-09-16_1.md  (+26 more)
(+198 files in other folders)
