[project]
name = "tnmt-1-github-io"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tnmt", email = "tanimoto.masashi@protonmail.com" }
]
dependencies = [
    "mkdocs-material>=9.5.19",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

