[project]
name = "tnmt-1-github-io"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tnmt", email = "tanimoto.masashi@protonmail.com" }
]
dependencies = [
    "mkdocs-material>=9.5.23",
    "mkdocs>=1.6.0",
    "pymdown-extensions>=10.8.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-rss-plugin>=1.12.2",
    "mkdocs-mermaid2-plugin>=1.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/main"]
